--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [scripts]
-start = "python virtru-audit-client"
+start = "python3 virtru-audit-client"
 
 [packages]
 requests = "*"
